Remove use of File{Input,Ouput}Stream
These two classes have a finalizer in Java 12, hence they are an
unnecessary burden for GC.

Use:
- Files.newInputStream() instead of FileInputStream
- Files.newBufferedReader() when we end up converting to a Writer
- Files.readAllBytes() if we end up reading the stream
- Files.copy() if we are copying the stream to another stream or file
- Files.writeString() when we are emitting just a plain string
- Files.newOutputStream() instead of FileOutputStream
- Files.newBufferedReader() when we end up conerting to a Writer

Signed-off-by: Robert Varga <robert.varga@pantheon.tech>